tests/machine/x/go/load_yaml.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/load_yaml.go:23:75: cannot use _ as value or type
../../../tests/machine/x/go/load_yaml.go:26:13: invalid operation: r (variable of type map[string]any) is not an interface

1: //go:build ignore
